<resources>
    <string name="app_name">AndroidEnergyConsumer</string>
    <string name="gps_module_launcher">GPS Module launcher</string>
    <string name="internet_module_launcher">Internet module launcher</string>
    <string name="sensors_launcher">Sensors launcher</string>
    <string name="calculations_launcher">Calculations launcher</string>
    <string name="gps_launcher">GPS launcher</string>
    <string name="constant_gps_work">Constant GPS work</string>
    <string name="request_interval_in_milliseconds">Request interval in milliseconds</string>
    <string name="internet_launcher">Internet launcher</string>
    <string name="constant_internet_work">Constant internet work</string>
    <string name="request_periodic_gps_updates">Request periodic GPS updates</string>
    <string name="request_periodic_internet_calls">Request periodic internet calls</string>
    <string name="calculations">Calculations</string>
    <string name="calculations_1">Calculations 1</string>
    <string name="calculations_2">Calculations 2</string>
    <string name="number_of_handlers">Number of handlers</string>
    <string name="handlers">Handlers</string>
    <string name="factor">Factor</string>
    <string name="perform_addition_calculations">Perform addition calculations</string>
    <string name="perform_multiplication_calculations">Perform multiplication calculations</string>
    <string name="abort_calculations">Abort calculations</string>
    <string name="calculations_status">Calculations status:</string>
    <string name="not_running">Not running</string>
    <string name="running">Running</string>
    <string name="start_bluetooth_scan">Start bluetooth scan</string>
    <string name="bluetooth_scanning_status">Bluetooth scanning status:</string>
    <string name="stop_bluetooth_scan">Stop bluetooth scan</string>
    <string name="bluetooth_module_launcher">Bluetooth module launcher</string>
    <string name="gps_working_status">GPS working status:</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="internet_working_status">Internet working status:</string>
    <string name="stop_internet_calls">Stop internet calls</string>
    <string name="url_to_ping_or_download">Url to ping/download</string>
    <string name="url_conversion_error">Url conversion error</string>
    <string name="google_url">https://google.com</string>
    <string name="default_file_download_url">http://10.42.0.1:8080/bigFileDownload</string>
    <string name="call_response">Call response:</string>
    <string name="last_result">Last result:</string>
    <string name="last_location">Last location:</string>
    <string name="stop_gps_updates">Stop GPS updates</string>
    <string name="calculations_result">Calculations result:</string>
    <string name="file_download_count">File download count:</string>
    <string name="scanning_finished">Scanning finished</string>
</resources>