<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/calculationsLauncherTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculations"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/performAdditionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/perform_addition_calculations"
        app:layout_constraintBottom_toTopOf="@+id/calculationsHandlersNOInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsLauncherTitleLabel" />

    <Button
        android:id="@+id/performMultiplicationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/perform_multiplication_calculations"
        app:layout_constraintEnd_toEndOf="@+id/performAdditionsButton"
        app:layout_constraintStart_toStartOf="@+id/performAdditionsButton"
        app:layout_constraintTop_toBottomOf="@+id/performAdditionsButton" />

    <EditText
        android:id="@+id/calculationsHandlersNOInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/handlers"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintEnd_toStartOf="@+id/calculationsFactorInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/performAdditionsButton" />

    <EditText
        android:id="@+id/calculationsFactorInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/factor"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/calculationsHandlersNOInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculationsHandlersNOInput"
        app:layout_constraintTop_toTopOf="@+id/calculationsHandlersNOInput" />

    <TextView
        android:id="@+id/calculationsHandlersNOLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_handlers"
        app:layout_constraintStart_toStartOf="@+id/calculationsHandlersNOInput"
        app:layout_constraintTop_toBottomOf="@+id/calculationsHandlersNOInput" />

    <TextView
        android:id="@+id/calculationsFactorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factor"
        app:layout_constraintStart_toEndOf="@+id/calculationsHandlersNOInput"
        app:layout_constraintTop_toBottomOf="@+id/calculationsFactorInput" />

    <TextView
        android:id="@+id/calculationsStatusInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calculations_status"
        app:layout_constraintBottom_toTopOf="@+id/abortCalculationsButton"
        app:layout_constraintEnd_toStartOf="@+id/calculationsStatusValueLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsHandlersNOInput" />

    <TextView
        android:id="@+id/calculationsStatusValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/calculationsStatusInfoLabel"
        tools:text="status" />

    <Button
        android:id="@+id/abortCalculationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abort_calculations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsStatusInfoLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>