<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startBluetoothScanningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/start_bluetooth_scan"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothScanningStatusInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/bluetoothScanningStatusInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bluetooth_scanning_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/abortBluetoothScanningButton"
        app:layout_constraintEnd_toStartOf="@+id/bluetoothScanningStatusValueLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBluetoothScanningButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/bluetoothScanningStatusValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_running"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bluetoothScanningStatusInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/bluetoothScanningStatusInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/bluetoothScanningStatusInfoLabel"/>

    <Button
        android:id="@+id/abortBluetoothScanningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stop_bluetooth_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothScanningStatusInfoLabel"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>