<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/gpsModuleLauncherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_module_launcher"
        app:layout_constraintBottom_toTopOf="@+id/calculationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculations_launcher"
        app:layout_constraintBottom_toTopOf="@+id/internetModuleLauncherButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsModuleLauncherButton" />

    <Button
        android:id="@+id/internetModuleLauncherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_module_launcher"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothModuleLauncherButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsButton" />

    <Button
        android:id="@+id/bluetoothModuleLauncherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_module_launcher"
        app:layout_constraintBottom_toTopOf="@id/appVersionInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetModuleLauncherButton" />

    <TextView
        android:id="@+id/appVersionInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Revision: 12345678, Build number: -1, Version: 0.2.0, Debug" />

</androidx.constraintlayout.widget.ConstraintLayout>