<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/periodicGPSWorkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/request_periodic_gps_updates"
        app:layout_constraintBottom_toTopOf="@+id/gpsIntervalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constantGPSWorkButton" />

    <TextView
        android:id="@+id/gpsLauncherTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gps_launcher"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/constantGPSWorkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="164dp"
        android:text="@string/constant_gps_work"
        app:layout_constraintBottom_toTopOf="@+id/periodicGPSWorkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsLauncherTitleLabel" />

    <EditText
        android:id="@+id/gpsIntervalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/request_interval_in_milliseconds"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/gpsIntervalLabel"
        app:layout_constraintEnd_toEndOf="@+id/periodicGPSWorkButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/periodicGPSWorkButton" />


    <TextView
        android:id="@+id/gpsIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_interval_in_milliseconds"
        app:layout_constraintBottom_toTopOf="@+id/gpsWorkingStatusInfoLabel"
        app:layout_constraintStart_toStartOf="@+id/gpsIntervalInput"
        app:layout_constraintTop_toBottomOf="@+id/periodicGPSWorkButton" />

    <TextView
        android:id="@+id/gpsWorkingStatusInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_working_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stopGpsUpdatesButton"
        app:layout_constraintEnd_toStartOf="@+id/gpsWorkingStatusValueLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsIntervalLabel" />

    <TextView
        android:id="@+id/gpsWorkingStatusValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_running"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/gpsWorkingStatusInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gpsWorkingStatusInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/gpsWorkingStatusInfoLabel"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/stopGpsUpdatesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="Stop GPS updates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsWorkingStatusInfoLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>