<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/periodicInternetWorkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/request_periodic_internet_calls"
        app:layout_constraintBottom_toTopOf="@+id/internetIntervalInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/internetLauncherTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/internet_launcher"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/constantInternetWorkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="164dp"
        android:text="@string/constant_internet_work"
        app:layout_constraintBottom_toTopOf="@+id/internetIntervalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetLauncherTitleLabel" />

    <EditText
        android:id="@+id/internetIntervalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/request_interval_in_seconds"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/internetIntervalLabel"
        app:layout_constraintEnd_toEndOf="@+id/periodicInternetWorkButton"
        app:layout_constraintStart_toStartOf="@+id/periodicInternetWorkButton" />

    <TextView
        android:id="@+id/internetIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_interval_in_seconds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/internetIntervalInput"
        app:layout_constraintTop_toBottomOf="@+id/constantInternetWorkButton" />
</androidx.constraintlayout.widget.ConstraintLayout>